<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PurlinFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearlayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="40dp"
                android:contentDescription="@string/image1"
                app:srcCompat="@drawable/image1"
                tools:ignore="ImageContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linearlayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/text_box1"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:text="@string/text_box2"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:text="@string/text_box3"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:text="@string/text_box4"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:text="@string/text_box5"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:text="@string/text_box6"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:text="@string/text_box7"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:text="@string/text_box8"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearlayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/spinner1"
                    android:gravity="center"
                    android:spinnerMode="dropdown"
                    android:textAlignment="center" />

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:contentDescription="@string/spinner2"
                    android:gravity="center"
                    android:spinnerMode="dropdown"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:contentDescription="@string/spinner3"
                    android:gravity="center"
                    android:spinnerMode="dropdown"
                    android:textAlignment="center" />

                <Spinner
                    android:id="@+id/spinner3"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:contentDescription="@string/spinner4"
                    android:gravity="center"
                    android:spinnerMode="dropdown"
                    android:textAlignment="center" />

                <Spinner
                    android:id="@+id/spinner4"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:contentDescription="@string/spinner5"
                    android:gravity="center"
                    android:spinnerMode="dropdown"
                    android:textAlignment="center" />

                <Spinner
                    android:id="@+id/spinner5"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:contentDescription="@string/spinner6"
                    android:gravity="center"
                    android:spinnerMode="dropdown"
                    android:textAlignment="center" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout5"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/resulttext1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="0sp" />

                <TextView
                    android:id="@+id/resulttext2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="0sp" />

                <TextView
                    android:id="@+id/resulttext3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="0sp" />
            </LinearLayout>

            <Button
                android:id="@+id/button_purlin2"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:text="@string/Button1"
                tools:ignore="UsingOnClickInXml" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp">
            </Space>

        </LinearLayout>

    </LinearLayout>

</ScrollView>